[project]
name = "custom-collections"
version = "0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click-shell>=2.1",
    "logging>=0.4.9.6",
    "typer>=0.20.0",
    "types-click-shell>=2.1.0.20250821",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]
